VACMS-7320 fix spacing for buttons and titles in paragraph form entities. fix right alignment issues

--- a/docroot/themes/custom/vagovclaro/assets/scss/components/_paragraphs.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/components/_paragraphs.scss
@@ -15,3 +15,11 @@
 .js .paragraph-type-top .paragraph-type-title {
   flex-basis: 25%;
 }
+
+.js .vagovclaro .paragraph-top {
+  grid-template-columns: auto auto 1fr auto;
+}
+
+.form-item--multiple .field-add-more-submit {
+  margin-bottom: var(--space-m);
+}
